--- a/FreeAPS/Sources/Localizations/Main/sv.lproj/Localizable.strings
+++ b/FreeAPS/Sources/Localizations/Main/sv.lproj/Localizable.strings
@@ -425,6 +425,9 @@ Enact a temp Basal or a temp target */
 /* " min" in Treatments list */
 " min" = " min";
 
+/* */
+"Unable to change anything" = "Det går inte att ändra något";
+
 
 /* Calendar and Libre transmitter settings ---------------
  */
@@ -837,7 +840,7 @@ Enact a temp Basal or a temp target */
 "Debug options" = "Felsökningsalternativ";
 
 /* */
-"Adds a lot of data to the Issue Report " = "Lägger till en hel del data till rapporten ";
+"Adds a lot of data to the Issue Report " = "Lägger till en hel del data till rapporten";
 
 /* */
 "Persist sensordata" = "Bevara sensordata";
@@ -899,6 +902,9 @@ Enact a temp Basal or a temp target */
 /* Sensor day(s) */
 " day(s)" = " dagar";
 
+/* Option to show HR in Watch app*/
+"Display HR on Watch" = "Visa puls på klocka istället för förväntat blodglukos";
+
 
 /* Headers for settings ----------------------- */
 "OpenAPS main settings" = "OpenAPS huvudsakliga inställningar";
@@ -908,6 +914,10 @@ Enact a temp Basal or a temp target */
 "OpenAPS targets settings" = "OpenAPS målvärdesinställningar";
 
 "OpenAPS other settings" = "OpenAPS andra inställningar";
+
+/* Experimental stuff settings */
+"XPM settings" = "XPM-inställningar";
+
 
 /* Glucose Simulator CGM */
 "Glucose Simulator" = "Glukossimulator";
@@ -948,12 +958,176 @@ Enact a temp Basal or a temp target */
 
 /* */
 "After you create glucose records in the Health app, please open FreeAPS X to help us guaranteed transfer changed data" = "Efter att du lagt till glukos i appen 'Hälsa', öppna FreeAPS X för att bekräfta att överföring skett på rätt sätt";
-/* --------------------------------------------
 
+/* New ALerts ------------------------- */
+/* Info title */
+"Info" = "Info";
+
+/* Warning title */
+"Warning" = "Varning";
+
+/* Error title */
+"Error" = "Fel";
+
+/* Manual temp basal mode */
+"Manual" = "Manuellt";
+
+/* Status highlight when manual temp basal is running. */
+"Manual Basal" = "Manuell temporär basal";
+
+/* Current Manual Temp basal */
+" -  Manual Basal ⚠️" = " -  Manuell basal ⚠️";
+
+/* Total AT / Scheduled basal insulin */
+" U/day" = " IE/dag";
+
+/* Total AT / Scheduled basal insulin */
+"Total" = "Totalt";
+
+/* ---------------------------------------
+  DASH strings
+*/
+"Attach Pod" = "Fäst podden";
+
+"Deactivate Pod" = "Inaktivera podd";
+
+/* */
+"Deactivating..." = "Inaktiverar...";
+
+"Pair Pod" = "Parkoppla podd";
+
+/* Text for previous pod information row */
+"Previous Pod Information" = "Info om tidigare podd";
+
+/* Text for confidence reminders navigation link */
+"Confidence Reminders" = "Bekräftelseljud";
+
+"Confidence reminders are beeps from the pod which can be used to acknowledge selected commands." = "Bekräftelseljud är pip från podden som kan användas som bekräftelser på utförda kommandon";
+
+/* button title for saving low reservoir reminder while saving */
+"Saving..." = "Sparar...";
+
+/* button title for saving low reservoir reminder */
+"Save" = "Spara";
+
+/* Alert title for error when updating confidence reminder preference */
+"Failed to update confidence reminder preference." = "Misslyckades att uppdatera inställning för bekräftelseljud";
+
+/* */
+"No Error" = "Inget fel";
+
+/* description label for active time pod details row */
+"Active Time" = "Aktiv tid";
+
+/* Title string for BeepPreference.silent */
+"Disabled" = "Av";
+
+/* Title string for BeepPreference.manualCommands */
+"Enabled" = "På";
+
+/* Title string for BeepPreference.extended */
+"Extended" = "Utökad";
+
+/* Description for BeepPreference.silent */
+"No confidence reminders are used." = "Inga ljud på.";
+
+/* Description for BeepPreference.manualCommands */
+"Confidence reminders will sound for commands you initiate, like bolus, cancel bolus, suspend, resume, save notification reminders, etc. When Loop automatically adjusts delivery, no confidence reminders are used." = "Bekräftelseljud kommer att pipa för för ala pumpkommandon du ger, som bolus, avbryt bolus, pausa pump, återuppta insulintillförsel, spara påminnelser etc. När FreeAPS X automatiskt justerar insulintillförsel kommer inga pip att ljuda.";
+
+/* Description for BeepPreference.extended */
+"Confidence reminders will sound when Loop automatically adjusts delivery as well as for commands you initiate." = "Bekräftelsepip kommer att ljuda även vid automatiska pumpkommandon såväl som vid manuella.";
+
+/* Label text for expiration reminder default row */
+"Expiration Reminder Default" = "Standard påminnelsetid";
+
+/* */
+"Expiration Reminder" = "Påminnelse om utgångsdatum";
+
+/* */
+"Low Reservoir" = "Låg reservoarvolym";
+
+/* Value text for no expiration reminder */
+"No Reminder" = "Ingen påminnelse";
+
+/* */
+"Scheduled Reminder" = "Schemalagd påminnelse";
+
+/* */
+"Low Reservoir Reminder" = "Påminnelse om låg insulinnivå";
+
+/* The action string on pod status page when pod data is stale */
+"Make sure your phone and pod are close to each other. If communication issues persist, move to a new area." = "Säkerställ att din telefon och podd är nära varandra. Om problemet kvarstår, flytta till annan plats.";
+/* Format string for the action string on pod status page when pod expired. (1: service time remaining) */
+"Change Pod now. Insulin delivery will stop in %1$@ or when no more insulin remains." = "Byt podd nu. Insulintillförsel kommer att stoppas om %1$@ eller när insulinet är slut.";
+
+/* Label text for temporary basal rate summary */
+"Rate" = "Värde";
+
+/* Summary string for temporary basal rate configuration page */
+"%1$@ for %2$@" = "%1$@ i %2$@";
+
+/* Description text on manual temp basal action sheet */
+"Loop will not automatically adjust your insulin delivery until the temporary basal rate finishes or is canceled." = "FreeAPS X kommer inte automatiskt att justera dina insulindoser förrän den temporära basalen är färdig eller har avbrytits.";
+/* Button text for setting manual temporary basal rate*/
+"Set Temporary Basal" = "Ställ in temporaär basal";
+
+/* Navigation Title for ManualTempBasalEntryView */
+"Temporary Basal" = "Temporär basal";
+
+/* Alert title for a failure to set temporary basal */
+"Temporary Basal Failed" = "Temporär basal misslyckades";
+
+/* Alert format string for a failure to set temporary basal with recovery suggestion. (1: error description) (2: recovery text) */
+"Unable to set a temporary basal rate: %1$@\n\n%2$@" = "Kunde inte ställa in en temporär basaldos: %1$@\n\n%2$@";
+
+/* Alert format string for a failure to set temporary basal. (1: error description) */
+"Unable to set a temporary basal rate: %1$@" = "Kunde inte ställa in en temporär basaldos: %1$@";
+
+/* Alert title for missing temp basal configuration */
+"Missing Config" = "Konfiguration saknas";
+
+/* Alert format string for missing temp basal configuration. */
+"This PumpManager has not been configured with a maximum basal rate because it was added before manual temp basal was a feature. Please go to therapy settings -> delivery limits and set a new maximum basal rate." = "En maximal basaldos har inte ställts in. Gå till inställningen 'Maxdoser' för att ställa in den maximala basaldosen";
+
+/* description label for active time pod details row */
+"Active Time" = "Aktiv tid";
+
+/* description label for total delivery pod details row */
+"Total Delivery" = "Total mängd insulin given";
+
+/* */
+"Add Omnipod Dash" = "Lägg till Omnipod Dash";
+
+/* */
+"Insert Cannula" = "För in kanyl";
+
+/* */
+"Check Cannula" = "Kontrollera kanyl";
+
+/* */
+"Setup Complete" = "Inställning färdig";
+
+/* */
+"Insulin Suspended" = "Insulintillförsel pausad";
+
+/* Text for suspend resume button when insulin delivery is suspending */
+"Suspending insulin delivery..." = "Pausar pump...";
+
+/* Text for suspend resume button when insulin delivery is suspended */
+"Resume Insulin Delivery" = "Återuppta pump";
+
+/* Text for suspend resume button when insulin delivery is resuming */
+"Resuming insulin delivery..." = "Återupptar pump...";
+
+/* Alert title for suspend error */
+"Failed to Suspend Insulin Delivery" = "Misslyckades att återuppta insulintillförsel";
+
+/* --------------------------------------
 
   Infotexts from openaps.docs and androidaps.docs
   FreeAPS X
 */
+
 /* ”Rewind Resets Autosens” */
 
 "This feature, enabled by default, resets the autosens ratio to neutral when you rewind your pump, on the assumption that this corresponds to a probable site change. Autosens will begin learning sensitivity anew from the time of the rewind, which may take up to 6 hours. If you usually rewind your pump independently of site changes, you may want to consider disabling this feature." = "Denna funktion, på som standard, återställer 'Autosens' kvot till neutralt läge vid reservoarbyten, då det antas att du vid detta tillfälle även byter infusionskanyl. 'Autosens' kommer nu börja lära sig din insulinkänslighet på nytt, vilket kan ta upp till 6 timmar. Om du vanligtvis gör reservoarbyten oberoende av kanylbyten, kanske du ska överväga att inaktivera denna funktion.";
@@ -1066,3 +1240,27 @@ Enact a temp Basal or a temp target */
 
 /* "Noisy CGM Target Multiplier" */
 "Defaults to 1.3. Increase target by this amount when looping off raw/noisy CGM data" = "Standardvärde 1,3. Öka målvärdet med denna multipel när du loopar med ofiltrerad CGM-data med mycket brus";
+
+/* Enable Floating Carbs */
+ "Defaults to false. If true, then dose slightly more aggressively by using all entered carbs for calculating COBpredBGs. This avoids backing off too quickly as COB decays. Even with this option, oref0 still switches gradually from using COBpredBGs to UAMpredBGs proportionally to how many carbs are left as COB. Summary: use all entered carbs in the future for predBGs & don't decay them as COB, only once they are actual." = "Defaults to false. If true, then dose slightly more aggressively by using all entered carbs for calculating COBpredBGs. This avoids backing off too quickly as COB decays. Even with this option, oref0 still switches gradually from using COBpredBGs to UAMpredBGs proportionally to how many carbs are left as COB. Summary: use all entered carbs in the future for predBGs & don't decay them as COB, only once they are actual.";
+ 
+/* Enable AutoISF */
+"Defaults to false. Adapt ISF when glucose is stuck at high levels, only works without COB.\n\nRead up on:\nhttps://github.com/ga-zelle/autoISF/tree/2.8.2" = "Av som standard. Anpassa insulinkänsligheten (ISF) vid långvarigt höga blodsocker. Fungerar bara utan aktova kolhydrater (COB) \nLäs mer på nhttps://github.com/ga-zelle/autoISF/tree/2.8.2";
+
+/* AutoISF HourlyMaxChange */
+"Defaults to false. Rate at which autoISF grows per hour assuming bg is twice target. When value = 1.0, ISF is reduced to 50% after 1 hour of BG at 2x target." = "Av som standard. AutoISF tillåts att öka med denna faktor per timme, förutsatt att ditt blodsocker är dubbelt så högt som ditt målvärde. Vid värde = 1, reduceras insulinkänsligheten (ISF) med 50 % efter 1 timme med ett blodsockervärde 2 gånger över ditt målvärde.";
+
+/* AutoISF Max */
+"Multiplier cap on how high the autoISF ratio can be and therefore how low it can adjust ISF." = "Faktor som avgör med hur mycket AutoISF tillåts justera insulinkänsligheten (ISF)";
+
+/* SMB Max RangeExtension */
+"Default value: 1. This is another key OpenAPS safety cap, and specifies by what factor you can exceed the regular 120 maxSMB/maxUAM minutes. Increase this experimental value slowly and with caution. Available only when autoISF is enabled." = "Standardvärde: 1. Detta är en säkerhetsbegränsning i OpenAPS, som avgör med vilken faktor du kan överskrida maximala värdet för Max SMB- och Max UAM-basalminuter. Öka endast stegvis med försiktighet. Endast tillgänglig när AutoISF är på.";
+
+/* SMB DeliveryRatio */
+"Default value: 0.5 This is another key OpenAPS safety cap, and specifies what share of the total insulin required can be delivered as SMB. Increase this experimental value slowly and with caution." = "Standardvärde: 0.5. Detta är en säkerhetsbegränsning i OpenAPS som bestämmer hur stor del av nödvändigt insulin som kan tillföras som en supermikrobolus (SMB). Öka endast stegvis och med stor försiktighet";
+
+/* Adjust Dynamic ISF constant */
+"Adjust Dynamic ISF constant" = "Justera dynamisk ISF - konstant";
+
+/* Enable Dynamic ISF */
+"Enable Dynamic ISF" = "Använd dynamisk ISF";
